--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,4 +1,4 @@
-version: 1.0.{build}-alpha
+version: 1.0.{build}
 configuration: Release
 assembly_info:
   patch: true
@@ -24,7 +24,7 @@ deploy:
   artifact: $(NUGET_PACKAGE_ID).$(APPVEYOR_BUILD_VERSION).nupkg
   on:
     branch: master
-    appveyor_repo_tag: false # Change to true for realeasing only git tag/releases.
+    appveyor_repo_tag: true # Change to true for realeasing only git tag/releases.
 notifications:
 - provider: Webhook
   url: https://webhooks.gitter.im/e/c9c30518be704cdd5ad4
